<resources>
    <string name="app_name">Scroll Test and View Button</string>
    <string name="name">Text View</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="bio_t">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque fermentum quam eu velit ultricies vestibulum. Duis nec tempor lacus. Integer consequat vulputate tellus ut vestibulum. In elementum ultricies diam. Aenean dapibus dolor ut fermentum dignissim. Nulla est libero, rhoncus ac hendrerit nec, ultricies vel quam. Etiam magna eros, faucibus vitae gravida vitae, tempor ut magna. Sed sit amet ante nisi. Nulla sollicitudin ante eu vulputate imperdiet. Nulla cursus iaculis mi, vel lobortis sem porttitor nec. In accumsan ex ut tellus fermentum, id tincidunt neque scelerisque. Phasellus ut odio a elit hendrerit consectetur. Vivamus ultrices rutrum ultricies. Sed condimentum, ligula sit amet scelerisque mattis, sem ante sodales metus, quis consectetur nisi mauris in ante. Praesent porta placerat viverra. Ut ut consequat justo.

        Sed pellentesque enim ut commodo lobortis. Nunc elementum velit vel consectetur egestas. Praesent nec nisi ligula. Pellentesque neque odio, viverra nec ex sit amet, sollicitudin aliquam turpis. Integer volutpat laoreet leo nec hendrerit. Aliquam et condimentum odio, sed vestibulum mi. In hac habitasse platea dictumst. Quisque vitae justo id lorem convallis scelerisque.

        Ut nec condimentum neque. Pellentesque gravida lectus vel ex dictum eleifend sit amet non lectus. Donec quam tellus, rhoncus sed nibh at, efficitur suscipit arcu. Nunc maximus sem ac consequat luctus. Nullam efficitur bibendum lorem, nec consectetur arcu venenatis quis. Nulla facilisi. Mauris iaculis, felis eu tempor congue, augue diam varius neque, eu pretium nisi leo sed nibh. Maecenas volutpat eget ipsum ut tincidunt. Nullam ac arcu venenatis enim pellentesque sodales. Etiam malesuada turpis justo, sit amet varius erat euismod eget. Nulla ac dolor at nisl vestibulum condimentum a at erat. Fusce quis arcu non erat gravida malesuada.

        Suspendisse feugiat vehicula arcu eget euismod. Sed id lacus eleifend ipsum rutrum molestie. Phasellus accumsan tristique nunc, sed tincidunt urna volutpat pulvinar. Donec erat nulla, ultrices ac rhoncus a, laoreet et tortor. Nam ornare mi eu efficitur scelerisque. Nunc ut egestas nisl. Sed non justo tincidunt, egestas quam quis, feugiat elit. Nunc lobortis sagittis mattis. Curabitur vel dolor nibh. In non erat libero. Proin lacinia eros at erat pretium, ut cursus libero bibendum. Sed vel eros eget tellus dignissim cursus. Praesent semper lorem felis, quis laoreet dui bibendum sed. Maecenas ut tincidunt lectus, vitae fermentum velit.

        Proin vitae lacus non ligula accumsan consequat non et libero. Nullam pellentesque tincidunt nulla id fringilla. Vivamus eu dui consectetur, tincidunt velit eu, convallis odio. Fusce pulvinar in mauris vitae pulvinar. Sed eu libero sed turpis viverra blandit eu a purus. Nam consequat ex sed nisl vehicula maximus. Donec in velit eget tortor finibus rutrum. Aenean suscipit a enim ut consequat. Ut porta dui vitae nisi molestie, nec hendrerit dolor porta. Morbi porttitor convallis elit ut tincidunt. Phasellus at enim semper, condimentum eros quis, convallis ante. Duis sit amet eros pharetra, lobortis est non, finibus libero. In purus felis, accumsan vel lorem sit amet, rutrum sagittis tellus. Cras at semper ante, at suscipit nulla.

        Nullam sed tincidunt tortor, eu fermentum diam. Sed viverra sapien id dui faucibus convallis. Nam orci leo, sagittis sed tristique at, cursus id risus. Nulla facilisi. Donec vehicula eleifend leo sit amet accumsan. Etiam ac nibh leo. Suspendisse quis odio mattis, tincidunt est sit amet, ornare justo.

        Maecenas accumsan vehicula viverra. Aliquam aliquet facilisis tellus, vestibulum feugiat lacus sagittis sed. Proin mattis diam non nulla aliquet porta at eget massa. Vestibulum placerat condimentum accumsan. Sed eu suscipit mauris, nec blandit libero. Ut sed est dictum, fermentum tellus quis, interdum libero. Fusce ut est condimentum, dignissim lacus a, finibus erat. Quisque pretium pharetra odio, scelerisque porttitor nisl venenatis at. Aliquam sed quam egestas tellus eleifend cursus at quis tellus.

        ucibus ante, eu tempus arcu. Donec ultricies eleifend efficitur. Sed non felis nec eros facilisis pellentesque vel ac tellus. Integer quis ornare erat. Etiam vulputate lorem at nunc viverra tincidunt. Nullam porttitor magna eu lectus ultricies, et elementum arcu faucibus. Nam fringilla lacus sed maximus scelerisque. Proin sagittis nulla urna, eu mollis ligula ultricies vitae. Aenean lacinia ullamcorper cursus. Quisque rhoncus vestibulum ornare.
    </string>
    <string name="what_is_your_nickname">What is your Nickname?</string>
    <string name="done">Done</string>
</resources>
