<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding" android:paddingEnd="@dimen/small_padding">


    <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_text"
            android:textAlignment="center"
            style="@style/NameStyle"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText" android:layout_marginTop="@dimen/layout_margin" android:textAlignment="center"
            android:hint="@string/what_is_your_nickname" style="@style/NameStyle"/>
    <Button
            android:text="@string/done"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/nickname_text" style="@style/NameStyle"
            android:textAlignment="center"/>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:id="@+id/star_image" android:contentDescription="@string/yellow_star"
            android:layout_marginTop="@dimen/layout_margin"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/scroll">
        <TextView
                android:text="@string/bio_t"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bio_text"
                android:lineSpacingMultiplier="1.2"
        />
    </ScrollView>
</LinearLayout>